# mcp-server

./: .env.example  .gitignore  .mcp-version-state  .token-test  Dockerfile  LICENSE  README.md  audit-case-studies.md  biz-outreach.md  glama.json  index.js  install.js  license.js  main.go  mcp-registry-server.json  npm-install.js  package.json  render.yaml  server.json  server.mjs  smithery-server.js  smithery.yaml  start-all.sh  watchdog.ps1
.github/workflows/: publish-mcp.yml  publish-registry.yml  publish-sdk.yml
.well-known/mcp/: server-card.json
cmd/correctover/: main.go
data/: README.md  verification-log-summary.md
docs/: console.html  gpt_design.txt  gpt_design_nb.txt  index.html
docs/api-examples/: api_payload.json  api_response.json  gpt_payload.json  gpt_payload_console.json  gpt_response.json  gpt_response_console.json
docs/blog/: correctover-agent-chain-verified.md
fc-functions/license-api/: index.py
license/: license.go  license_test.go
marketing/: correctover-diffusion-plan.md  tutorial-verified-failover.md  week3-content-plan.md  执行手册.md
marketing/articles/: correctover-brand-article.md  drift-detection-article.md  litellm-vs-correctover.md  llm-reliability-stack-2026.md  stateless-validation-2026.md
marketing/docs/: docs-api-reference.html  (+6 more)
mcp/: server.go
provider/: provider.go
registry/: server.json
scripts/: check_mcp_spec_version.sh  deploy_fc_code.py  dump_fc_env.py  install_spec_monitor.bat  license_admin.py  payment_integrate.py  update_fc_hmac.py
sdk/: LICENSE  MANIFEST.in  README.md  _fixes2_repo.py  benchmark_real_api.py  build.py.old  build_correctover.py  build_v130.py  do_build.py  pyproject.toml  setup.py  test_correctover.py
sdk/correctover/: __init__.py  _checkup.py  _core.py  _device.py  _engine.py  _fixes.py  _fixes2.py  _guard.py  _ping.py  _security.py  _sentry.py  _stats.py  _tracker.py  _version.py  carbon.py  chain.py  checkpoint.py  classifier.py  cli.py  client.py  cloudkill.py  cost_tracker.py  dashboard.py  demo.py  diagnoser.py  drift.py  free_provider.py  gateway.py  health_scorer.py  integrity.py  license.py  logging_config.py  router.py  run.py  shield.py  smart_router.py  state_machine.py  status.py  telemetry.py  tracing.py  (+1 more)
sdk/correctover/benchmark/: __init__.py  fault_injector.py  metrics_collector.py  run_benchmark.py  scenarios.py
sdk/scripts/: build_matrix.sh
video/: package-lock.json  package.json  tsconfig.json
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  correctover-vscode-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
web/: audit.html  checkout.html  console.html  index.html
(+32 files in other folders)
