[build-system]
requires = ["setuptools>=64,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "correctover"
version = "1.1.0"
description = "Correctover \u2014 Protocol-level contract validation with automatic verified failover for LLM APIs."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary Commercial License"}
keywords = ["llm","self-healing","failover","circuit-breaker","api-resilience"]
authors = [{name = "Correctover Team", email = "team@correctover.com"}]
classifiers = ["Development Status :: 5 - Production/Stable","Intended Audience :: Developers","License :: Other/Proprietary License","Operating System :: OS Independent","Programming Language :: Python :: 3","Programming Language :: Python :: 3.8"]
dependencies = ["httpx>=0.24.0","aiohttp>=3.8.0"]

[tool.setuptools.packages.find]
include = ["correctover*"]

[tool.setuptools.package-data]
correctover = ["*.pyc"]
